# gcs

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  theme.js  vite.config.js.timestamp-1703848355469-e0c3dbdf48b7a.mjs
src/: app.html  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ctx.rs  error.rs  event.rs  main.rs
src-tauri/src/ipc/: mod.rs  params.rs  response.rs  vehicle.rs
src-tauri/src/mavproxy/: mod.rs
src-tauri/src/model/: mod.rs  model_store.rs  vehicle.rs
src/lib/: stores.js
src/lib/Gauges/: airspeed_analog.js  altimeter_analog.js  attitude_indicator_analog.js  gauge.svelte  heading_indicator_analog.js  index.js  rotatable-button.js  styles.css  tachometer_analog.js  turn_coordinator_analog.js  vertical_speed_analog.js
src/lib/Gauges/graphics/: primitives.js
src/lib/Indicators/: ArmDisarm.svelte
src/lib/Maps/: Map.svelte  MapToolbar.svelte  MarkerPopup.svelte  marker.js
src/lib/Utils/: helper.js  stores.js
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/home/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/telemetry/: +page.svelte
src/routes/test/: +page.svelte
static/assets/: a3.jfif  a5.jfif
