[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
vergen = { version = "7", features = ["git"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.193"
tokio = { version = "1", features = ["full"] }
tauri = { version = "1.5.4", features = [ "window-unmaximize", "window-minimize", "window-unminimize", "window-show", "window-hide", "window-close", "window-start-dragging", "window-maximize"] }
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2.0"
mavlink = { git = "https://github.com/mavlink/rust-mavlink", rev = "0.10.2", features = [
    "ardupilotmega",
    "emit-extensions",
] }
regex = "1"
json5 = "0.4.1"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
